# MovieTrackerCLI

./: .gitignore  README.md  Отчет.md
Claude/: CLAUDE_VERSION.md  pyproject.toml  settings.toml
Claude/src/movie_tracker/: config.py  exceptions.py  main.py
Claude/src/movie_tracker/api/: auth.py  client.py  details.py  search.py
Claude/src/movie_tracker/cache/: manager.py
Claude/src/movie_tracker/cli/: actions.py  auth.py  details.py  search.py  watchlist.py
Claude/src/movie_tracker/formatters/: table.py
Claude/src/movie_tracker/models/: __init__.py
Claude/src/movie_tracker/storage/: auth.py  watchlist.py
Claude/src/movie_tracker/utils/: validators.py
Claude/tests/: conftest.py
Claude/tests/integration/: test_cli.py
Claude/tests/unit/: test_models.py  test_storage.py  test_validators.py
Codex/: .env.example  .gitignore  CHANGELOG.md  MOVIETRACKER_CLI_CODEX_VERSION.md  MovieTracker_CLI_TZ.md  README.md  pyproject.toml  settings.toml
Codex/.github/workflows/: ci.yml  release.yml
Codex/packaging/: movie-tracker.spec
Codex/src/movie_tracker/: __init__.py  config.py  exceptions.py  logging.py  main.py
Codex/src/movie_tracker/api/: __init__.py  auth.py  client.py  details.py  popular.py  recommendations.py  search.py  trending.py  watchlist.py
Codex/src/movie_tracker/cache/: __init__.py  manager.py
Codex/src/movie_tracker/cli/: auth.py  cache.py  details.py  errors.py  popular.py  recommend.py  search.py  state.py  trending.py  watchlist.py
Codex/src/movie_tracker/formatters/: csv.py  json.py  output.py  table.py
Codex/src/movie_tracker/models/: __init__.py  movie.py  person.py  tv.py  watchlist.py
Codex/src/movie_tracker/storage/: __init__.py  auth.py  watchlist.py
Codex/src/movie_tracker/utils/: helpers.py  validators.py
Codex/tests/: conftest.py
Codex/tests/integration/: test_cli_basic.py
Codex/tests/unit/: test_api_search.py  test_storage_watchlist.py  test_validators.py
