[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-tracker-claude"
version = "1.0.0"
description = "CLI-утилита для поиска, отслеживания и анализа фильмов и сериалов через TMDB"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MovieTracker Team" }]
keywords = ["movies", "tv", "tmdb", "cli", "watchlist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.12",
    "httpx[socks]>=0.27",
    "rich>=13.0",
    "diskcache>=5.6",
    "tinydb>=4.8",
    "dynaconf>=3.2",
    "loguru>=0.7",
    "anyio>=4.0",
    "tomli-w>=1.0",
]

[project.scripts]
movie-tracker-claude = "movie_tracker.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-anyio>=0.0.0",
    "coverage>=7.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
