[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "movie-tracker-cli-codex"
version = "1.0.0"
description = "MovieTracker CLI Codex: консольный трекер фильмов и сериалов на Kinopoisk API Unofficial."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MovieTracker CLI Codex" }]
keywords = ["cli", "movies", "kinopoisk", "tracker", "typer"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "diskcache>=5.6.3",
  "tinydb>=4.8.0",
  "dynaconf>=3.2.0",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.0",
  "coverage>=7.5.0",
  "mypy>=1.10.0",
  "pyinstaller>=6.6.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-httpx>=0.30.0",
  "ruff>=0.4.0",
]

[project.scripts]
movie-tracker = "movie_tracker.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/movie_tracker"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
movie-tracker = "movie-tracker {args}"
test = "pytest -q {args}"
coverage = "pytest --cov=movie_tracker --cov-report=term-missing {args}"
lint = "ruff check src tests && mypy src"
format = "black src tests && ruff check --fix src tests"
build-bin = "pyinstaller packaging/movie-tracker.spec"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --basetemp=.pytest-tmp"

[tool.coverage.run]
branch = true
source = ["movie_tracker"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
packages = ["movie_tracker"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
